tests/positive/phase1/016_comparison_eq.c
// TEST: comparison_eq
// DESCRIPTION: Equality comparison
// EXPECTED_EXIT: 1
// ENVIRONMENT: hosted
// PHASE: 1
// STANDARD_REF: 6.5.9 (Equality operators)

int main(void) {
    return 5 == 5;
}
