tests/negative/syntax_errors/002_missing_brace.c
// TEST: missing_brace
// DESCRIPTION: Missing closing brace
// EXPECT_COMPILE_FAIL: yes
// ERROR_PATTERN: expected '}'
// PHASE: 1

int main(void) {
    return 0;
